feat:fix wait sync bug and opt swagger query parameter
